--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "2.8.3",
     "standard": "^17.0.0",
     "standard-react": "^4.0.0"
   }
